--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-	<title>IA de Vigilância por Vídeo</title>
+	<title>Identificação de itens da casa</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -19,37 +19,35 @@
   <h1 class="btn btn-warning heading">Identificação de itens da casa</h1>
   <br>
   <br>
-  <h2 class="btn btn-info tag">Varanda (o lugar que quase ninguem vai)</h2>
+  <h1 class="note">CocoSSD: </h1>
+  <button class="btn btn-info tag" onclick="model()">Varanda (o lugar que quase ninguem vai)</button>
+  <br>
+  <h3 class="note" id="status1">Dos 7 objetos q eu pensei, o CocoSSD identificou: </h3>
   <br>
   <br>
-  <a href=""></a>
+  <button class="btn btn-info tag" onclick="model()">Sala de estar (sempre suja)</button>
+  <br>
+  <h3 class="note" id="status2">Dos 7 objetos q eu pensei, o CocoSSD identificou: </h3>
   <br>
   <br>
-  <h2 class="btn btn-info tag">Sala de estar (sempre suja)</h2>
+  <button class="btn btn-info tag" onclick="model()">Sala de jantar (mais conhecida como sala dos computadores)</button>
+  <br>
+  <h3 class="note" id="status3">Dos 11 objetos q eu pensei, o CocoSSD identificou: </h3>
   <br>
   <br>
-  <a href=""></a>
+  <button class="btn btn-info tag" onclick="model()">Quarto da bagunça (que um dia vai virar um escritório)</button>
   <br>
-  <br><h2 class="btn btn-info tag">Sala de jantar (mais conhecida como sala dos computadores)</h2>
-  <br>
-  <br>
-  <a href=""></a>
-  <br>
-  <br><h2 class="btn btn-info tag">Quarto da bagunça (que um dia vai virar um escritório)</h2>
+  <h3 class="note" id="status4">Dos 17 objetos q eu pensei, o CocoSSD identificou: </h3>
   <br>
   <br>
-  <a href=""></a>
+  <button class="btn btn-info tag" onclick="model()">Meu quarto (que tá parecendo um chiqueiro)</button>
   <br>
-  <br><h2 class="btn btn-info tag">Meu quarto (que tá parecendo um chiqueiro)</h2>
-  <br>
-  <br>
-  <a href=""></a>
+  <h3 class="note" id="status5">Dos 28 objetos q eu pensei, o CocoSSD identificou: </h3>
   <br>
   <br>
-  <h2 class="btn btn-info tag">Cozinha (ate que tá arrumada)</h2>
+  <button class="btn btn-info tag" onclick="model()">Cozinha (ate que tá arrumada)</button>
   <br>
-  <br>
-  <a href=""></a>
+  <h3 class="note" id="status6">Dos 21 objetos q eu pensei, o CocoSSD identificou: </h3>
   <br>
   <br>
 
